# for_my_son

./: README.md
picture/try/: stack.yaml  try.cabal
picture/try/app/: add12and3.hs  addition.hs  bigAddition.hs  bigDensha.hs  bigPomp.hs  bigPompHashigo.hs  carsAndChildren.hs  colorDensha.hs  countMany.hs  countTrain.hs  cube.hs  dango.hs  densha2.hs  hashigosha.hs  kanji.hs  kanji2.hs  kuruma.hs  pomp.hs  pompHashigo.hs  pompHashigo2.hs  pompHashigo3.hs  sevens.hs  shiki.hs  suuji.hs  tenDensha.hs  tenTomato.hs  tomato.hs  try.hs  twenty.hs  unitTen.hs
picture/try/src/: Lib.hs
