name:                try
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/YoshikuniJujo/try#readme
license:             BSD3
license-file:        LICENSE
author:              Yoshikuni Jujo
maintainer:          PAF01143@nifty.ne.jp
copyright:           2016 Yoshikuni Jujo
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -Wall -fno-warn-tabs
  build-depends:       base >= 4.7 && < 5, xturtle, yjsvg
  default-language:    Haskell2010

executable try
  hs-source-dirs:      app
  main-is:             try.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle, yjsvg
  default-language:    Haskell2010

executable addition
  hs-source-dirs:      app
  main-is:             addition.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle, yjsvg
  default-language:    Haskell2010

executable twenty
  hs-source-dirs:      app
  main-is:             twenty.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle, yjsvg
  default-language:    Haskell2010

executable bigAddition
  hs-source-dirs:      app
  main-is:             bigAddition.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle, yjsvg
  default-language:    Haskell2010

executable add12and3
  hs-source-dirs:      app
  main-is:             add12and3.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle, yjsvg
  default-language:    Haskell2010

executable cube
  hs-source-dirs:      app
  main-is:             cube.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle, yjsvg
  default-language:    Haskell2010

executable sevens
  hs-source-dirs:      app
  main-is:             sevens.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle, yjsvg
  default-language:    Haskell2010

executable unitTen
  hs-source-dirs:      app
  main-is:             unitTen.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle, yjsvg
  default-language:    Haskell2010

executable countTrain
  hs-source-dirs:      app
  main-is:             countTrain.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle, yjsvg
  default-language:    Haskell2010

executable kuruma
  hs-source-dirs:      app
  main-is:             kuruma.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle, yjsvg
  default-language:    Haskell2010

executable kanji
  hs-source-dirs:      app
  main-is:             kanji.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle, yjsvg
  default-language:    Haskell2010

executable densha2
  hs-source-dirs:      app
  main-is:             densha2.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle, yjsvg
  default-language:    Haskell2010

executable carsAndChildren
  hs-source-dirs:      app
  main-is:             carsAndChildren.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle, yjsvg
  default-language:    Haskell2010

executable tomato
  hs-source-dirs:      app
  main-is:             tomato.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle
  default-language:    Haskell2010

executable dango
  hs-source-dirs:      app
  main-is:             dango.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle
  default-language:    Haskell2010

executable colorDensha
  hs-source-dirs:      app
  main-is:             colorDensha.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle
  default-language:    Haskell2010

executable tenDensha
  hs-source-dirs:      app
  main-is:             tenDensha.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle
  default-language:    Haskell2010

executable hashigosha
  hs-source-dirs:      app
  main-is:             hashigosha.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle
  default-language:    Haskell2010

executable tenTomato
  hs-source-dirs:      app
  main-is:             tenTomato.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle
  default-language:    Haskell2010

executable pomp
  hs-source-dirs:      app
  main-is:             pomp.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle
  default-language:    Haskell2010

executable bigPomp
  hs-source-dirs:      app
  main-is:             bigPomp.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle
  default-language:    Haskell2010

executable pompHashigo
  hs-source-dirs:      app
  main-is:             pompHashigo.hs
  ghc-options:         -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, try, xturtle
  default-language:    Haskell2010

test-suite try-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , try
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/YoshikuniJujo/try
